# urban-edge-vision-analytics

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  PORTFOLIO_DELIVERABLES.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
analytics/: flow.py  metrics.py
api/: main.py  pipeline_manager.py
api/routes/: artifacts.py  cameras.py  local_inference.py  metrics_extra.py  pipeline.py  snapshot.py  use_cases.py
configs/: camera.local.example.json  camera.tapo.example.json  jetson.json  local.json  nvidia-stack.example.json
docs/: architecture.md  claude-code-kickoff.md  live-vlm-engine-brief.md  operator-wrapper-brief.md  roadmap.md
docs/diagrams/: data-flow.mmd  deployment-view.mmd  runtime-flow.mmd  system-architecture.mmd
events/: lifecycle.py  reporter.py  schemas.py
examples/: generate_mock_report.py  mock_inference_report.json  sample_event.json
packs/: __init__.py  base.py  compatibility.py  moving_object.py  registry.py  speed_violation.py  stop_sign.py
store/: __init__.py  config_store.py  schema.sql
telemetry/: metrics.py  runtime.py
tests/: test_api_smoke.py  test_camera_profiles.py  test_cameras_bindings_api.py  test_config_store.py  test_event_lifecycle.py  test_event_reporter.py  test_flow_analytics.py  test_live_pipeline.py  test_metrics_data_source_badge.py  test_nvidia_adapters.py  test_pack_compatibility.py  test_packs_moving_object.py  test_packs_speed_violation.py  test_packs_stop_sign.py  test_schemas.py  test_snapshot_transport.py
transports/: __init__.py  snapshot.py
vision/: adapters.py  camera_profiles.py  live_pipeline.py  schemas.py  source_loader.py
web/: .env.local.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
web/app/: index.css  main.tsx  routes.tsx
web/app/pages/: artifacts.tsx  camera-detail.tsx  events.tsx  live.tsx  metrics.tsx  use-case-studio.tsx
web/components/: camera-config-form.tsx  citation-card.tsx  credibility-banner.tsx  data-source-badge.tsx  nav-bar.tsx  pack-toggle-grid.tsx  pipeline-status-bar.tsx  zone-editor.tsx
web/lib/: api.ts  sse.ts  utils.ts
