[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-edge-vision-analytics"
version = "0.1.0"
description = "Edge vision inference and traffic event observability for smart intersections"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.7",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "sse-starlette>=2.1",
]

[project.scripts]
urban-edge-camera-check = "vision.camera_profiles:main"
urban-edge-live-pipeline = "vision.live_pipeline:main"

[project.optional-dependencies]
vision = [
  "opencv-python-headless>=4.9",
  "onnxruntime>=1.18",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "vision*", "events*", "analytics*", "telemetry*", "packs*", "store*", "transports*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic
